Close idle connections

--- a/config/config.json
+++ b/config/config.json
@@ -15,6 +15,11 @@
     },
     "define": {
       "freezeTableName": true
+    },
+    "pool": {
+      "max": 10,
+      "min": 0,
+      "idle": 15000
     }
   }
 }
