--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "html": "^1.0.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
     "pg": "^8.6.0",
